fix search input alignment in wfm/requests

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -162,7 +162,7 @@
 			padding-top: 5px;
 
 			wfm-multiple-search-input {
-				margin: 0;
+				margin: 10px 10px 10px 0;
 
 				.full-padding {
 					width: 50%;
